// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio basic 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
}

.c4 {
  font-size: 0.8em;
  margin-left: 0;
}

.c1 {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  border-color: #dbdbdb;
}

.c1:hover {
  border-color: #595959;
}

.c3 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: pointer;
}

.c2 {
  border-radius: 50%;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background-color: #000000;
  width: 0;
  height: 0;
  opacity: 0;
}

<label
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <input
      className="c3"
      onChange={[Function]}
      type="radio"
    />
  </div>
  <span
    className="c4"
  />
</label>
`;

exports[`Radio prop disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: not-allowed;
}

.c4 {
  font-size: 0.8em;
  margin-left: 0;
}

.c1 {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  border-color: #dbdbdb;
  border-color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c1:hover {
  border-color: #595959;
}

.c3 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: not-allowed;
}

.c2 {
  border-radius: 50%;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background-color: #595959;
  width: 0;
  height: 0;
  opacity: 0;
}

<label
  className="c0"
  disabled={true}
>
  <div
    className="c1"
    disabled={true}
  >
    <div
      className="c2"
      disabled={true}
    />
    <input
      className="c3"
      disabled={true}
      onChange={[Function]}
      type="radio"
    />
  </div>
  <span
    className="c4"
  />
</label>
`;
